--- a/index.html
+++ b/index.html
@@ -95,27 +95,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <li>
       <img src="images/banner2.jpg" alt="">
       <div class="container">
-<<<<<<< Updated upstream
-        <h1>Build your own satelite</h1>
-        <div class="contrast">
-          <p>
-            Download all necessary files to build your own Cube satelite. Click button in right top corner of your screan. 
-=======
         <h1>For students.<br />By students.</h1>
         <div class="contrast">
           <p>
             We built our own satellite the simplest way we could to allow you to do the same. Simple as that.
->>>>>>> Stashed changes
           </p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <img src="images/banner3.jpg" alt="">
-      <div class="container">
-        <h1>OpenSource Data</h1>
-        <div class="contrast">
-          <p>You can also do space based research without sending a satellite. Check out our respository for the available data.</p>
         </div>
       </div>
     </li>
@@ -147,18 +131,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l">
 				<img class="img-circle img-responsive" src="images/cubesat1.png" alt="Generic placeholder image">
-				<h4>Send you own satelite to space</h4>
-				<p>SchoolSat aims to provide primary and secondary school students with an opportunity to explore the space. Build your satelite today!</p>
+				<h4>Send your CubeSat to space</h4>
+				<p>SchoolSat aims to provide primary and secondary school students with an opportunity to explore the space. Team up with some coursemates and start builing your satelite today!</p>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l">
 				<img class="img-circle img-responsive" src="images/cubesat2.png" alt="Generic placeholder image">
 				<h4>Modify it as you like</h4>
-				<p>SchoolSat is customisable to suit needs of your own research project. Choose 8 out of 30 available senors to measure physical properties that you need.</p>
+				<p>SchoolSat is customisable to suit the needs of your own research project. Choose sensors from an extensive list of possibilities to measure any physical properties that you'd like.</p>
 			</div><!-- /.col-lg-4 -->
 			<div class="col-lg-4 col-md-4 col-sm-6 feature-w3l f3">
 				<img class="img-circle img-responsive" src="images/cubesat3.png" alt="Generic placeholder image">
 				<h4>All data is OpenSource!</h4>
-				<p>If building a satelite is not for you, make research with data that has already been collected. Check our repository to find out more. It's all Open Source!</p>
+				<p>If building a satelite is not for you, you can research with data that has already been collected by other students like you. Check our repository to find out more. It's all Open Source!</p>
 			</div><!-- /.col-lg-4 -->
 		</div><!-- /.row -->
 	</div>
@@ -166,8 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- /features section -->
 <!-- work section -->
 <section class="our-work" id="work">
-	<h3 class="text-center agileits agileinfo wthree w3-agileits">Exploring the space</h3>
-	<p class="text-center agileits agileinfo wthree w3-agileits" class="row">With SchoolSat you decide which physical qunatities you want to measure. Free your imaginationa and start exploring the space!</p>
+	<h3 class="text-center agileits agileinfo wthree w3-agileits">Exploring space</h3>
+	<p class="text-center agileits agileinfo wthree w3-agileits" class="row">With SchoolSat you decide which physical qunatities you want to measure. Free your imagination and start exploring space!</p>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
@@ -181,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="col-lg-7 col-md-3 col-sm-6 work-w3h">
 								<div class="work-w3agile">
 									<h5>Understand Cloud movement using image analysis</h5>
-									<p class="work-agile">Feeling like watching Weather forecast on TV is too mainstream? Use data collected by the SchoolSat cameras to analyse cloud movements and try to predict weather changes if you are keen.</p>
+									<p class="work-agile">Feeling like watching the weather forecast on TV is too mainstream? Use data collected by the SchoolSat cameras to analyse cloud movements and try to predict weather changes if you are keen.</p>
 								</div>
 							</div>
 						</div>
@@ -234,7 +218,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 							<h6>Use OpenSource data</h6>
-							<p class="work-w3ls">Check our respository for data, or submit your reaserch idea and we will inform you when a satelite capabke of making your research will be sent to space.</p>
+							<p class="work-w3ls">Check our respository for data, or submit your research idea and we will inform you when a satelite capabke of making your research will be sent to space.</p>
 						</div>
 					</div>
 				</div>
@@ -252,22 +236,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-md-6 col-sm-6">
 				<div class="serv-w3l">
 					<img src="images/1.png" alt="work" class="img-responsive">
-					<h4 class="text-center">Check our repository.</h4>
-					<p class="serv-w3ls">See in our repository if we already have the data you are looking for.</p>
+					<h4 class="text-center">Build your satellite</h4>
+					<p class="serv-w3ls">Download all files required to build your own CubeSat. You can 3D Print the parts for your SchoolSat before venturing to do an alluminium one.</p><p> Download the guide here: <a href="#">SchoolSat Building Guide</a>.</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6">
 				<div class="serv-w3l">
 					<img src="images/2.png" alt="work" class="img-responsive">
-					<h4 class="text-center">Build your satellite</h4>
-					<p class="serv-w3ls">Download all files required to build your own Cube satellite. Downloadable file has a manual to guide you through.</p>
+					<h4 class="text-center">Choose the modules</h4>
+					<p class="serv-w3ls">Outer Space is a very big place, so there are sure loads of things we can learn from it. Mount different sensors and modules in an Arduino, and start exploring.</p><p> Download the guide here: <a href="#">SchoolSat Arduino Guide</a>.</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6">
 				<div class="serv-w3l">
 					<img src="images/3.png" alt="work" class="img-responsive">
-					<h4 class="text-center">Apply for a free lunch</h4>
-					<p class="serv-w3ls">Satelite lunching is expensive, but there are many ways you could do it for free. Check out Satellite Applications Catapult's In-orbit programme</p>
+					<h4 class="text-center">Launch your SchoolSat</h4>
+					<p class="serv-w3ls">Once your SchoolSat is ready, why not send it to space. After all, that's what satelites are for. The In-Orbit Deveopment Programme might help you that.</p><p> Download the guide here: <a href="https://sa.catapult.org.uk/iod/"> Satellite Applications Catapult IOP</a>.</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-md-6 col-sm-6">
@@ -313,121 +297,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
         </div>
     <p class="text-center agileits-w3layouts agile w3-agile"> ...But check out another OpenSource repository <a href="http://data.satapps.org">here</a></p>
-	
+
 </section>
 <!-- /repository section -->
-<!-- contact section -->
-<section class="our-contacts" id="contact">
-	<h3 class="text-center">Our Contacts</h3>
-	<p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-	<div class="container">
-		<div class="row">
-			<form action="#" method="post">
-				<div class="col-lg-3 col-md-3 col-sm-6">
-					<input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-6">
-					<input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-8">
-					<textarea class="form-control slideanim" id="message" name="message" placeholder="Message" rows="5"></textarea>
-				</div>
-				<div class="col-lg-2 col-md-2 col-sm-4">
-					<button class="btn btn-outline1 btn-lg" type="submit">Send</button>
-				</div>
-			</form>
-		</div>
-		<p class="contact-w3l">By Signing Up, You Agree To Our <a href="#">Terms & Conditions</a></p>
-	</div>
-</section>
-<!-- /contact section -->
 <!-- footer section -->
 <section class="footer">
 	<div class="container">
-		<div class="col-lg-4 col-md-4 col-sm-6 footer-left">
-			<h4>Our Contacts</h4>
-			<p class="p-w3ls">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-			<div class="footer-contacts">
-				<div>
-					<i class="fa fa-globe" aria-hidden="true"></i>
-					<p class="p1">21 Jack Street, Newyork, USA.</p>
-				</div>
-				<div>
-					<i class="fa fa-mobile" aria-hidden="true"></i>
-					<p class="p1">+15 15151515</p>
-				</div>
-				<div>
-					<i class="fa fa-fax" aria-hidden="true"></i>
-					<p class="p1">+00 10101010</p>
-				</div>
-				<div>
-					<i class="fa fa-envelope" aria-hidden="true"></i>
-					<p class="p1"><a href="mailto:myemail@example.com">myemail@example.com</a></p>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 footer-center">
-			<h4>Quick Links</h4>
-			<div class="footer-links">
-				<a href="index.html">
-					<span class="fa fa-home" aria-hidden="true"></span>
-					<p class="p2">Home</p>
-				</a>
-				<a href="#feature">
-					<span class="fa fa-star" aria-hidden="true"></span>
-					<p class="p2">Our Features</p>
-				</a>
-				<a href="#work">
-					<span class="fa fa-cogs" aria-hidden="true"></span>
-					<p class="p2">Our Works</p>
-				</a>
-				<a href="#service">
-					<span class="fa fa-heart" aria-hidden="true"></span>
-					<p class="p2">Our Services</p>
-				</a>
-				<a href="#gallery">
-					<span class="fa fa-camera" aria-hidden="true"></span>
-					<p class="p2">Gallery</p>
-				</a>
-				<a href="#contact">
-					<span class="fa fa-share-square" aria-hidden="true"></span>
-					<p class="p2">Contact</p>
-				</a>
-			</div>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-6 footer-right">
-			<h4>Subscribe To Us</h4>
-			<div class="footer-agile">
-				<form action="#" method="post" class="form-horizontal" role="form">
-					<div class="form-group">
-						<div class="col-lg-12">
-							<input type="email" class="form-control" name="email" id="inputEmail1" placeholder="Email" required>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-lg-12">
-							<input type="text" class="form-control" name="name" id="text1" placeholder="Your Name" required>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-lg-12">
-							<button type="submit" class="btn-outline">Sign in</button>
-						</div>
-					</div>
-				</form><!-- form -->
-				<ul class="social-icons2">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<hr>
 		<div class="copyright">
-			<p>© 2017 University of Bristol. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">W3layouts</a></p>
+			<p>© 2018 University of Bristol. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">W3layouts</a></p>
 		</div>
 	</div>
 </section>
