Fixed nav link to repository

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#work">Open Source</a></li>
 						<li><a href="#service">Join today</a></li>
 						<li><a href="#gallery">Gallery</a></li>
-                        <li><a href="#repository">The Repository</a></li>
-						<li><a href="#contact">Contact</a></li>
+            <li><a href="#repository">Repository</a></li>
             <li><a></a></li>
             <li><a></a></li>
 					</ul>
@@ -288,8 +287,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </section>
 <!-- /gallery section -->
 <!-- repository section -->
-<section class="our-services" id="service">
-	<h3 class="text-center agileits-w3layouts agile w3-agile">The repository</h3>
+<section class="our-services" id="repository">
+	<h3 class="text-center agileits-w3layouts agile w3-agile">Repository</h3>
     <p class="text-center agileits-w3layouts agile w3-agile">We don't have any of our data available yet... </p>
     	<div class="container">
 				<div class="serv-w3l">
